# py-quizzer

./: .gitignore  CLAUDE.md  README.md  build.sh  conftest.py  pyproject.toml  render.yaml
.beads/backup/: backup_state.json  config.jsonl
.github/workflows/: tests.yml
.specify/memory/: constitution.md
docs/: specfiication_v0.md
quizzer/: asgi.py  settings.py  urls.py  wsgi.py
quizzer/snippetz/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
quizzer/snippetz/management/commands/: seed_quiz.py
quizzer/snippetz/migrations/: 0001_initial.py  0002_alter_pythonversion_unique_together_and_more.py
quizzer/snippetz/static/snippetz/: pygments.css
quizzer/snippetz/templates/snippetz/: base.html  no_snippets.html  question.html  results.html  start.html
quizzer/snippetz/templatetags/: pygments_tags.py
quizzer/snippetz/tests/: test_admin.py  test_commands.py  test_integration.py  test_models.py  test_services.py  test_templatetags.py  test_views.py
specs/001-python-version-quiz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-version-quiz/checklists/: requirements.md
specs/001-python-version-quiz/contracts/: routes.md
