[project]
name = "quizzer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "gunicorn",
    "whitenoise",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "quizzer.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=quizzer --cov-report=term --cov-report=xml"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
]
